--- a/css/drama.css
+++ b/css/drama.css
@@ -123,7 +123,7 @@ a:hover {
  }
 .page {
     padding: 1%;
-    background-image: url(../images/sky.jpeg);
+    background-image: url(../sky.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     /* border-radius: 10px; */
@@ -250,3 +250,4 @@ input{
 i{
    margin: 3px auto;
 }
+
