--- a/css/project3.css
+++ b/css/project3.css
@@ -42,7 +42,7 @@
    background-color: rgb(51, 125, 185); 
 }
 .content{
-   background-image: url(../images/comedy2.jpg);
+   background-image: url(../comedy2.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
@@ -83,7 +83,7 @@
 
 }
 .film1{
-   background-image: url(../images/comedy2.jpg);
+   background-image: url(../comedy2.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
@@ -91,7 +91,7 @@
    border-top: 5px solid black;
 }
 .film0{
-   background-image: url(../images/comedy2.jpg);
+   background-image: url(../comedy2.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
@@ -184,7 +184,7 @@
  .style1{
     margin-top: -15px;
     height: 120px;
-    /* background-image: url(../images/flower1.jpg); */
+    /* background-image: url(../flower1.jpg); */
     background-repeat: no-repeat;
    background-size: cover;
    background-color: rgb(208 114 114);
@@ -213,7 +213,7 @@
     background-color: rgb(51, 125, 185); 
  }
  .moviee{
-    background-image: url(../images/romantic15.jpg);
+    background-image: url(../romantic15.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -344,4 +344,5 @@
     display: block;
     border-radius: 40px;
     border: 5px solid #000000;
+
  }
